# Complexity-emergence

./: .gitignore  CLAUDE.md  README.md  config.toml  launcher.py  print_manager.py  print_postcard.py  pyproject.toml  requirements.txt  screenshot_presets.py  server.py
.claude/plans/: ultra-enchanted-perlis.md
.claude/skills/science-outreach/: SKILL.md
static/: index.html  index.html.bak
static/css/: style.css
static/js/core/: controls.js  engine.js  equations.js  fieldSim.js  i18n.js  interaction.js  snapshot.js  webgl.js
static/js/sims/: _template.js  boids.js  butterfly.js  kuramoto.js  neural-criticality.js  reaction-diffusion.js
tests/: test_api.py
