[project]
name = "complexity-emergence-postcard"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "flask",
    "numpy>=2.2.6",
    "pillow",
    "playwright>=1.58.0",
    "qrcode[pil]",
    "reportlab",
]

[project.scripts]
complexity-emergence = "launcher:main"
print-postcards = "print_postcard:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
