[project]
name = "complexity-emergence-postcard"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "flask",
    "numpy>=2.2.6",
    "pillow",
    "playwright>=1.58.0",
    "qrcode[pil]",
    "reportlab",
]

[project.scripts]
complexity-emergence = "launcher:main"
print-postcards = "print_postcard:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["launcher.py", "server.py", "print_postcard.py"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
